ncc/testsuite/negative/long-name.n
// bug 582

a.b.c.d.e.f.g.h.i.j.k.l.m.n.o.p.r.s.t.u.w // E: unbound name `a'
